--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,9 +33,9 @@ body {
     overflow-x: hidden;
     min-height: 100vh;
     width: 100%;
-    position: relative;
     height: 100%;
     color: var(--color-contrast);
+
 }
 
 body.active {
@@ -65,6 +65,7 @@ h1 {
     color: var(--color-contrast);
     font-size: 60px;
     font-weight: 400;
+    line-height: 20px;
 }
 
 h2 {
@@ -147,6 +148,7 @@ body.active #speciality .title-tag::after {
 
 section .title-tag h3{
     font-size: 16px;
+    font-weight: 500;
     color: var(--tertiary-color);
 }
 
@@ -192,12 +194,11 @@ header {
     height: 65px;
     padding: 30px;
     background-color: transparent;
-    /* box-shadow: var(--box-shadow-basic); */
     z-index: 1000;
 
 }
 
-#menu-toggle {
+#menu-toggle, #social-mobile {
     display: none;
 }
 
@@ -280,7 +281,7 @@ header i:hover {
 
 .sticky-social {
     position: fixed;
-    left: 0;
+    left: 0%;
     top: 60%;
     transform: translateY(-60%);
     background-color: transparent;
@@ -293,7 +294,7 @@ header i:hover {
     width: 50px;
     overflow-x: visible;
     gap: 1px;
-    transition: 1s ease-in-out;
+    transition: 0.6s ease-in;
 }
 .sticky-social a .background{
     width: 50px;
@@ -306,8 +307,6 @@ header i:hover {
     justify-content: center;
     align-items: center;
     transition: var(--transition-basic);
-    /* border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px; */
 }
 
 .sticky-social .background:hover{
@@ -316,7 +315,7 @@ header i:hover {
 
 }
 .sticky-social .background:hover i{
-    transform: translateX(15px);
+    transform: translateX(12px);
     transition: var(--transition-basic);
     color: white;
     
@@ -333,20 +332,14 @@ header i:hover {
 
 .about-popup {
     position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    right: 0;
-    left: 0;
-    bottom: -100%;
-    width: 100%;
-    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: -100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 16000;
     transition: 1s ease-in-out;
-
 }
-
-
 
 .popup-container {
     opacity: 0;
@@ -354,10 +347,9 @@ header i:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: var(--tertiary-color);
-    position: relative;
     transition: 1s ease-in-out;
     text-align: center;
     padding: 20px;
@@ -371,7 +363,7 @@ body.active .popup-container {
 .popup-container .bi-x-circle-fill{
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 25px;
     font-size: 27px;
     cursor: pointer;
     color: black;
@@ -385,7 +377,7 @@ body.active .popup-container {
 }
 .popup-container h3
 {
-    margin: 30px 20px 0 0;
+    margin: 10px 0;
     
 }
 .popup-container p
@@ -396,8 +388,6 @@ body.active .popup-container {
 }
 .popup-container i:hover{
     
-    /* color: var(--color-contrast);
-    transition: var(--transition-basic); */
     transform: scale(1.1);
 }
 .popup-container .img{
@@ -459,6 +449,7 @@ body.acive #home {
 .home-content p {
     margin: 0;
     color: white;
+    padding: 0 20px;
 }
 
 #home .dropdown
@@ -547,11 +538,89 @@ body.active .btn {
 
 #services {
     background-color: var(--color-normal);
-    padding-bottom: 80px;
+    padding: 150px 100px 80px;
     min-height: 100vh;
     height: auto;
     margin: 0;
 }
+
+.service-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 30px;
+}
+.service-container .service-card span{
+    font-size: 264px;
+    font-weight: 900;
+    color: var(--color-normal);
+    -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--color-contrast);
+    line-height: 200px;
+}
+.service-container .service-card,
+.service-container .service-card .text-content
+ {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    text-align: left;
+    background-color: var(--color-normal);
+}
+.service-container .service-card .text-content
+ {
+    transform: translateY(-50px);
+}
+
+.service-container .service-card .text-content h1{
+    font-size: 55px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: var(--bg-color);
+}
+.service-container .service-card .text-content p{
+    
+    text-align: left;
+    margin: 10px 0;
+}
+.service-card .text-content .btn-box{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: auto;
+    margin-top: 20px;
+    width: 150px;
+    height: 60px;
+    
+}
+
+.service-card .text-content .btn-box .btn-services{
+   margin: 0;
+   width: auto;
+   margin-left: 10px;
+   border: none;
+   transition: 0.3s all ease-in-out;
+}
+
+.btn-services:hover {
+    transform: translate(0);
+}
+.service-card .text-content .btn-box .bullet-div{
+    
+    width: 30px;
+    height: 30px;
+    border: 2px solid var(--bg-color);
+    transition: 0.3s all ease-in-out;
+}
+
+.service-card .text-content .btn-box:hover .bullet-div{
+    width: 2px;
+    
+}
+
 
 /* loader start */
 
@@ -603,7 +672,7 @@ body.active .btn {
 
 .quality-container{
     
-    padding-left: 50px;
+    padding-left: 30px;
     padding-top: 80px;
     display: flex;
     justify-content: center;
@@ -752,7 +821,7 @@ body.active #skills .skills-right{
     padding: 0;
     color: var(--color-contrast);
     flex-wrap: wrap;
-    height: 120vh;
+    height: 125vh;
 }
 
 #speciality .right{
@@ -761,7 +830,7 @@ body.active #skills .skills-right{
     background-size: cover;
     background-position: center;
     width: 50%;
-    min-height: 120vh;
+    min-height: 125vh;
 }
 #speciality .left{
     width: 50%;
@@ -786,7 +855,7 @@ body.active #speciality .left{
     border-left: 3px solid var(--secondary-color);
     padding: 25px;
     display: flex;
-    margin-top: 100px;
+    margin: 100px 0 20px;
 
 }
 #speciality .speciality-title p{
@@ -794,6 +863,7 @@ body.active #speciality .left{
     margin: 0;
     text-transform: uppercase;
     text-align: left;
+    color: black;
 }
 
 #speciality p
@@ -944,7 +1014,7 @@ body.active #projects {
 
 #contact {
 
-    padding: 200px 250px 100px;
+    padding: 200px 250px;
     background-color: var(--tertiary-color);
     margin-bottom: 380px;
 }
@@ -1278,11 +1348,13 @@ footer .copyright h5{
 
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1075px) {
 
-    #menu-toggle {
+    #menu-toggle, #social-mobile {
         display: block;
     }
+
+    
 
     header {
         justify-content: space-between;
@@ -1319,18 +1391,54 @@ footer .copyright h5{
     nav ul li a{
         
         letter-spacing: 3px;
-        font-size: 35px;
+        font-size: 40px;
         color: black;
+        font-weight: 200;
+        line-height: 45px;
     }
     header nav ul li{
         text-align: center;
 
     }
+
+    .sticky-social {
+        left: -100%;
+    }
+
     .info-cards {
 
         gap: 20px;
     }
 
+    #services {
+        padding: 150px 50px 80px;
+    }
+
+    .service-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 30px;
+        flex-direction: column;
+    }
+
+    .service-container .service-card,
+    .service-container .service-card .text-content
+    {
+
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+    }
+    .service-container .service-card .text-content p
+    {
+
+        max-width: 400px;
+        text-align: center;
+
+    }
     
     #speciality {
         flex-direction: column;
@@ -1351,7 +1459,7 @@ footer .copyright h5{
         flex-wrap: wrap;
         gap: 30px;
         background-color: var(--tertiary-color);
-        padding: 100px 0 100px 80px;
+        padding: 100px 10px 100px 60px;
    
     }
     #speciality .left .info-cards {
@@ -1400,7 +1508,10 @@ footer .copyright h5{
     
     }
 
-    
+    #skills .skills-right .container{
+        
+        padding-left: 10px;
+    }
     
 
     #load-more.btn {
@@ -1415,6 +1526,37 @@ footer .copyright h5{
 
 
 @media screen and (max-width: 600px){
+
+    .home-content .typing {
+       
+        font-size: 40px;
+        
+    }
+
+    /* section name tag */
+
+    section .title-tag {
+        width: 185px;
+        height: 100px;
+    }
+    section .title-tag::after {
+
+        border-width: 100px 45px 0 0;
+
+        
+    }
+
+    section .title-tag h3{
+        font-size: 13px;
+        
+    }
+
+    header {
+        padding: 30px 10px;
+    }
+    header .profile{
+        gap: 5px;
+    }
     .input-wrapper {
         flex-wrap: wrap;
     }
@@ -1423,6 +1565,52 @@ footer .copyright h5{
         width: 90%;
 
 
+    }
+
+    .popup-container h3
+    {
+        font-size: 18px;
+        
+    }
+    .popup-container p
+    {
+        font-size: 12px;
+        line-height: 21px;
+       
+    }
+
+    #about {
+        padding: 100px 20px 40px;
+        gap: 0;
+    }
+    .quality-container {
+        padding: 0;
+    }
+    .quality-container .quality h3{
+    
+       font-size: 12px;
+       max-width: 200px;
+       text-align: left;
+    }
+    .quality-container .quality{
+    
+       width: 270px;
+    }
+
+    footer {
+        padding: 30px;
+    }
+
+    footer .content-wrapper .left-column p
+    {
+    
+        font-size: 12px;
+        line-height: 21px;
+        margin: 10px 0;
+    }
+    footer .copyright
+    {
+        padding: 20px 0 0;
     }
 }
 
