--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -208,14 +208,13 @@ header {
     left: 0;
     width: 100%;
     height: 3.5px;
-    /* background-color: rgba(182, 182, 182, 0.15); */
 }
 .scroll-progress .scroll-highlight {
     border-top-right-radius: 4.5px;
     border-bottom-right-radius: 4.5px;
     width: 40%;
     height: 3.5px;
-    background-color: var(--secondary-color);
+    background-color: var(--color-contrast);
     transition: 0.15s ease-in-out;
 }
 
@@ -360,10 +359,10 @@ body.active .popup-container {
     padding: 20px;
     overflow-y: auto;
 }
-.popup-container .bi-x-circle-fill{
+.popup-container .bi-x-lg{
     position: absolute;
     top: 10px;
-    right: 25px;
+    right: 2%;
     font-size: 27px;
     cursor: pointer;
     color: black;
@@ -508,14 +507,10 @@ letter-spacing: 3px;
     width: 200px;
     margin-top: 100px;
 }
-.btn#load-more {
 
-    
-    letter-spacing: 3px;
-    width: 200px;
-}
 .btn#load-more i{
 
+    color: var(--color-contrast);
    margin-left: 10px;
 
 }
@@ -653,11 +648,11 @@ body.active .btn {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 40px;
     background-color: var(--color-normal);
     padding: 80px 0;
     min-height: 80vh;
     height: auto;
+    width: 100%;
 }
 #about .btn{
     color: white;
@@ -672,14 +667,15 @@ body.active .btn {
 
 .quality-container{
     
-    padding-left: 30px;
-    padding-top: 80px;
+    padding: 80px 30px 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 30px;
     margin: 30px 0;
+    width: 100%;
+    height: auto;
 }
 .quality-container .quality{
     
@@ -1009,7 +1005,88 @@ body.active #projects {
     border: solid 2px var(--bg-color);
 }
 
+/* video section start */
 
+
+.video-banner {
+    width: 100%;
+    height: 400px;
+    background-image: url(../Images/video.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.video-banner .video-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 15;
+}
+.video-banner .banner-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    z-index: 20;
+}
+.video-banner .banner-box h2{
+    font-weight: 200;
+    font-size: 35px;
+    letter-spacing: 2px;
+    color: white;
+    margin: 0;
+}
+.video-banner .play-button{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: solid white 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    overflow: visible;
+}
+.video-banner .banner-box .play-button i{
+    font-size: 50px;
+    color: white;
+    transform: translateX(4px);
+}
+
+
+.video {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    z-index: 25000;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.video iframe {
+    border: solid 5px white;
+}
+
+#video-close {
+    position: absolute;
+    top: 10%;
+    right: 20%;
+    color: rgba(182, 182, 182, 0.8);
+    font-size: 21px;
+    cursor: pointer;
+}
 /* contact section start */
 
 #contact {
@@ -1518,6 +1595,26 @@ footer .copyright h5{
         margin-top: 50px;
     }
 
+    .video-banner .banner-box{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .video-banner .banner-box h2{
+        font-size: 30px;
+    }
+
+    .video iframe {
+        height: 80%;
+        width: 80%;
+    }
+
+    #video-close {
+
+        top: 5%;
+        right: 5%;
+
+    }
+
 
     #contact {
         padding: 170px 40px 100px 40px;
@@ -1580,22 +1677,26 @@ footer .copyright h5{
     }
 
     #about {
-        padding: 100px 20px 40px;
-        gap: 0;
+        padding: 100px 10px 40px;
     }
+
+
     .quality-container {
         padding: 0;
+        justify-content: flex-start;
     }
-    .quality-container .quality h3{
-    
-       font-size: 12px;
-       max-width: 200px;
-       text-align: left;
-    }
+
     .quality-container .quality{
     
-       width: 270px;
+       height: auto;
+       padding: 0 10px;
+       gap: 10px;
+       width: auto;
     }
+    .quality-container .quality h3{
+        width: 250px;
+        text-align: left;
+     }
 
     footer {
         padding: 30px;
