--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1008,7 +1008,7 @@ body.active #projects {
 /* video section start */
 
 
-/* .video-banner {
+.video-banner {
     width: 100%;
     height: 400px;
     background-image: url(../Images/video.png);
@@ -1086,7 +1086,8 @@ body.active #projects {
     color: rgba(182, 182, 182, 0.8);
     font-size: 21px;
     cursor: pointer;
-} */
+}
+
 /* contact section start */
 
 #contact {
@@ -1624,9 +1625,12 @@ footer .copyright h5{
 
 @media screen and (max-width: 600px){
 
+
+
     .home-content .typing {
        
-        font-size: 40px;
+        font-size: 30px;
+        line-height: 5px;
         
     }
 
