--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1626,6 +1626,12 @@ footer .copyright h5{
 @media screen and (max-width: 600px){
 
 
+    #home {
+       
+        height: 120vh;
+
+    
+    }
 
     .home-content .typing {
        
