--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -833,7 +833,7 @@ body.active #skills .skills-right{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 30px;
     background-color: var(--tertiary-color);
     padding-left: 100px;
@@ -847,10 +847,8 @@ body.active #speciality .left{
 
 
 #speciality .left .speciality-title{
-    border-left: 3px solid var(--secondary-color);
-    padding: 25px;
-    display: flex;
-    margin: 100px 0 20px;
+
+    margin: 200px 0 20px;
 
 }
 #speciality .speciality-title p{
@@ -859,12 +857,7 @@ body.active #speciality .left{
     text-transform: uppercase;
     text-align: left;
     color: black;
-}
-
-#speciality p
-{
-    max-width: none;
-    margin-top: 40px;
+    padding: 0;
 }
 
 .info-cards {
@@ -1442,7 +1435,7 @@ footer .copyright h5{
 
     nav {
         position: absolute;
-        top: -1000%;
+        top: -100vh;
         left: 0;
         right: 0;
         width: 100vw;
@@ -1454,6 +1447,7 @@ footer .copyright h5{
     nav.active {
 
         top: 100%;
+        
     }
     
     header nav ul {
@@ -1541,6 +1535,12 @@ footer .copyright h5{
         padding: 100px 10px 100px 60px;
    
     }
+
+    #speciality .left .speciality-title{
+
+        margin-top: 120px;
+    
+    }
     #speciality .left .info-cards {
         display: flex;
         justify-content: flex-start;
@@ -1550,16 +1550,6 @@ footer .copyright h5{
         width: 400px;
         gap: 30px;
         width: 100%;
-    }
-
-    
-    #speciality .left .speciality-title{
-        border-left: 3px solid var(--secondary-color);
-        padding: 25px;
-        display: flex;
-        margin-top: 100px;
-        width: 100%;
-    
     }
 
     #projects {
